<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="50dp"
    android:gravity="center|start"
    android:elevation="6dp"
    android:background="@drawable/shape_layout_bottom">

    <RelativeLayout
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:background="@drawable/shape_ic_shop">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_shop"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorHint"
            android:textSize="12sp"
            android:layout_margin="2dp"
            android:text="@string/products"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textColor="@color/colorTextPrice"
            android:textSize="14sp"
            android:text="@string/price"/>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_delete"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_weight="1"
        android:background="@drawable/shape_btn"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:gravity="center"
        android:text="@string/order_now"
        />
</LinearLayout>