<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/shape_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/order_cost"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start|center"
            android:textColor="@color/colorRed"
            android:textSize="14sp"
            android:text="@string/price"
            android:layout_marginStart="4dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cash"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginStart="4dp"
            android:text="@string/cash"
            android:textColor="@color/black"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorBorder"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_rides"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:gravity="start|center"
                    android:textSize="15sp"
                    android:text="@string/name"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:layout_marginEnd="4dp"
                    android:textColor="@color/black"
                    android:text="يبعد 05.3 ك م"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:drawableStart="@drawable/ic_marker_details"
                android:text="... الرياض, المنطقة الصناعية, شارع الرش"
                android:textSize="12sp"
                android:textColor="@color/colorText"/>

            <FrameLayout
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:background="@color/colorBorder"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:gravity="start|center"
                        android:textSize="15sp"
                        android:text="@string/name"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="11sp"
                        android:textColor="@color/black"
                        android:layout_marginEnd="4dp"
                        android:text="يبعد 05.3 ك م"/>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:drawableStart="@drawable/ic_marker_details"
                    android:text="... الرياض, المنطقة الصناعية, شارع الرش"
                    android:textSize="12sp"
                    android:textColor="@color/colorText"/>
        </LinearLayout>

    </LinearLayout>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="2"
                android:gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:text="@string/accept_order"
                android:background="@drawable/shape_btn"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:text="@string/refused"
                android:textColor="@color/colorTextCancel"
                android:background="@drawable/shape_btn_cancel"/>

        </LinearLayout>
</LinearLayout>