<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".ui.fragment.TripsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:textColor="@color/colorRed"
                android:text="@string/news"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorRed"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:text="@string/current"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:visibility="gone"
                android:background="@color/colorRed"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:text="@string/completed"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:visibility="gone"
                android:background="@color/colorRed"/>
        </LinearLayout>
    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20.04.2020"
            android:textSize="15sp"
            android:layout_margin="16dp"
            android:textColor="@color/colorText"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerTrips"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:listitem="@layout/item_rides"/>
</LinearLayout>